--- a/docs/markerManifest.json
+++ b/docs/markerManifest.json
@@ -1,7 +1,7 @@
 {
     "urls": [
-        "Descriptors/amongus/amongus",
-        "Descriptors/hiro/hiro",
-        "Descriptors/kirby/kirby"
+        "/UnityWebARTest/Descriptors/amongus/amongus",
+        "/UnityWebARTest/Descriptors/hiro/hiro",
+        "/UnityWebARTest/Descriptors/kirby/kirby"
     ]
 }
