--- a/.github/workflows/sync-ar-markers.yml
+++ b/.github/workflows/sync-ar-markers.yml
@@ -26,15 +26,20 @@ jobs:
       # 3) Copy manifest + descriptors into the site
       - name: Copy marker assets
         run: |
-          cp unity/Assets/StreamingAssets/markerManifest.json docs/markerManifest.json
-          rm -rf docs/Descriptors
-          cp -R unity/Assets/StreamingAssets/Descriptors docs/Descriptors
+          cp unity/Assets/StreamingAssets/markerManifest.json docs/StreamingAssets/markerManifest.json
+          rm -rf docs/StreamingAssets/Descriptors
+          cp -R unity/Assets/StreamingAssets/Descriptors docs/StreamingAssets/Descriptors
+      - name: Copy functions
+        run: |
+          cp unity/Assets/StreamingAssets/functionManifest.json docs/StreamingAssets/functionManifest.json
+
+
 
       # 4) Commit & push back to website
       - name: Commit & Push
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/markerManifest.json docs/Descriptors
+          git add docs/StreamingAssets/markerManifest.json docs/Descriptors
           git commit -m "🔄 sync AR markers from Unity" || echo "No changes"
           git push
