--- a/.github/workflows/sync-ar-markers.yml
+++ b/.github/workflows/sync-ar-markers.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/StreamingAssets/markerManifest.json docs/Descriptors
+          git add docs/StreamingAssets/markerManifest.json docs/StreamingAssets/Descriptors
           git commit -m "🔄 sync AR markers from Unity" || echo "No changes"
           git push
